--- a/RelayServerTest/RelayServer.csproj
+++ b/RelayServerTest/RelayServer.csproj
@@ -2,24 +2,50 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Platforms>AnyCPU;x86</Platforms>
+    <Platforms>AnyCPU;x86;x64</Platforms>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <PublishAot>False</PublishAot>
+    <OptimizationPreference>Speed</OptimizationPreference>
+    <Trimming>none</Trimming>
+    <TieredPGO>true</TieredPGO>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Include="protobuf-net" Version="3.1.22" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="NetworkLibrary">
-      <HintPath>..\..\..\..\Desktop\NetworkExperiments\Protobuff\bin\Release\netstandard2.0\NetworkLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="Protobuff">
-      <HintPath>..\..\..\..\Desktop\NetworkExperiments\Protobuff\bin\Release\netstandard2.0\Protobuff.dll</HintPath>
+      <HintPath>..\..\NetworkExperiments\Protobuff\bin\Release\net8.0\NetworkLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
 
